dev: mentions legal text too large fix

--- a/front/src/assets/main.scss
+++ b/front/src/assets/main.scss
@@ -52,6 +52,9 @@ main {
   gap: 0.5em;
 
   padding: 0.5em;
+  width: 100%;
+  max-width: 100ch;
+  margin: 0 auto;
 
   h1 {
     text-align: center;
